# Fleet-Management-System

./: .dockerignore  .gitignore  Cargo.toml  TODO.md  api_testing_script.py  fleet  package-lock.json  test_alerts.csv  test_assignments.csv  test_credentials.csv  test_customers.csv  test_drivers.csv  test_maintenance_records.csv  test_maintenance_schedules.csv  test_routes.csv  test_shipments.csv  test_telemetry.csv  test_transport_jobs.csv  test_vehicles.csv
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
backend/examples/: generate_openapi.rs
backend/migrations/: 20240101000000_init.sql  20240102000000_full_schema.sql  20260103000000_app_settings.sql  20260103000001_add_notify_sms.sql  20260109000000_add_driver_fields.sql
backend/src/: api_docs.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth_middleware.rs
backend/src/repositories/: mod.rs
backend/src/routes/: assignment.rs  auth.rs  driver.rs  financial.rs  logistics.rs  maintenance.rs  mod.rs  settings.rs  telemetry.rs  users.rs  vehicle.rs
backend/src/services/: assignment_service.rs  auth_service.rs  mod.rs  (+8 more)
backend/tests/: assignment_api_test.rs  assignment_repo_test.rs  auth_api_test.rs  driver_api_test.rs  driver_repo_test.rs  financial_api_test.rs  logistics_api_test.rs  logistics_repo_test.rs  maintenance_api_test.rs  maintenance_repo_test.rs  security_test.rs  telemetry_api_test.rs  telemetry_repo_test.rs  user_repo_test.rs  vehicle_api_test.rs  vehicle_repo_test.rs  vehicle_status_repo_test.rs
cli/: .dockerignore  .gitignore  Cargo.toml
cli/src/: main.rs
(+189 files in other folders)
