[package]
name = "fleet_management_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "fleet_management_backend"
path = "src/lib.rs"

[[bin]]
name = "fleet_management_backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
env_logger = "0.11"
log = "0.4"
redis = { version = "0.24", features = ["tokio-comp"] }
argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
aws-config = "1"
aws-sdk-s3 = "1"
rust_decimal = { version = "1.33", features = ["serde-with-float"] }
derive_more = "0.99"
async-trait = "0.1.89"
futures-util = "0.3"

[dev-dependencies]
mockall = "0.13"
