[package]
name = "fleet_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dialoguer = "0.11" # For interactive prompts
ratatui = "0.26"   # For TUI mode
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
